assets/styles/styles.css
/* ... */
.header__nav {
  --margin-top: var(--spacing-500);
  /* Move to Desktop: --margin-top: var(--spacing-600);  */

  display: grid;
  grid-template-columns: repeat(2, max-content);
  align-items: center;
  justify-content: space-between;
  position: relative;
  margin-block-start: var(--margin-top);
  width: 87.5%;
  max-width: 69.5rem;
}

.header__toggle {
  background-color: transparent;
  border: 0;
  cursor: pointer;
}

.header__nav-list {
  position: absolute;
  left: 0;
  top: var(--spacing-600);

  /* preset 6 bold */
  list-style-type: none;
  font-size: var(--fs-preset-6);
  line-height: var(--lh-150);
  letter-spacing: var(--ls-none);
  font-weight: var(--fw-bold);

  background-color: var(--clr-primary-purple-950);

  width: 100%;
  border-radius: 0.6rem;

  gap: calc(var(--spacing-200) + 0.36rem);
  text-align: center;

  padding: var(--spacing-400) var(--spacing-200);
  display: none;
}

.header__nav-list.is-open {
  display: grid;
}

.header__link {
  color: var(--clr-basic-white);
  text-decoration: none;
  display: block;
  outline: none;
  padding: var(--spacing-100);
}

.header__link:hover,
.header__link:focus-visible {
  border-radius: 1.75rem;
  background-color: var(--clr-primary-blue-400);
}

.header__nav-divider {
  background-color: var(--clr-neutral-grey-500);
  height: 1px;
  width: 100%;
  opacity: 25%;

  outline: 0;
}

.header__hero {
  text-align: center;
}

.header__hero-img {
  margin-inline-start: 5%;
  max-width: 135%;
  width: 140%;
  height: auto;
}

.header__title {
  color: var(--clr-neutral-grey-900);
  /* preset 2 bold */
  font-size: var(--fs-preset-2);
  line-height: var(--lh-115);
  letter-spacing: var(--ls-tight);
  font-weight: var(--fw-bold);

  margin-block-start: 40px;
  margin-block-end: 16px;
}

.header__description {
  color: var(--clr-neutral-grey-500);
  margin: 0 auto;
  max-inline-size: 85%;
  /* preset 6 medium */
  font-size: var(--fs-preset-6);
  line-height: var(--lh-175);
  letter-spacing: var(--ls-none);
  font-weight: var(--fw-medium);
}

.header__cta {
  /* preset 5 bold */
  font-size: var(--fs-preset-5);
  line-height: var(--lh-150);
  letter-spacing: var(--ls-none);
  font-weight: var(--fw-bold);

  color: var(--clr-basic-white);
  background-color: var(--clr-primary-blue-400);

  padding: var(--spacing-200) var(--spacing-500);
  border: 0;
  outline: none;
  border-radius: 6.25rem;
  margin-block-start: 32px;
}

.header__cta:hover,
.header__cta:focus-within {
  cursor: pointer;
  background-color: var(--clr-secondary-blue-300);
}
@media (min-width: 48rem) {
  .header__link,
  .header__nav-divider {
    margin: 0 auto;
    width: 85%;
  }
}

@media (min-width: 90rem) {
  .header {
    width: 87.5%;
    max-width: 69.5rem;
    margin: 0 auto;
    display: grid;
    justify-items: start;
    overflow: visible;
  }
  .header__nav {
    --margin-top: var(--spacing-600);
    width: 100%;
    justify-self: start;
    grid-template-columns: max-content 1fr;
    gap: 2.5%;
  }

  .header__toggle,
  .header__nav-divider {
    display: none;
  }
  .header__nav-list {
    position: static;
    display: grid;
    grid-template-columns: repeat(3, max-content) 1fr repeat(2, max-content);
    justify-content: start;
    padding: 0;
    /* preset 7 bold color: gray-500 */
    font-size: var(--fs-preset-7);
    background-color: transparent;

    width: 100%;
  }
  .header__list-item:nth-child(5),
  .header__list-item:nth-child(6) {
    justify-self: end;
  }
  .header__list-item:nth-child(5) {
    grid-column: -2;
  }
  .header__list-item:nth-child(6) {
    grid-column: -1;
  }
  .header__link {
    color: var(--clr-neutral-grey-500);
    width: max-content;
    padding: 8px 24px;
  }
  .header__link:hover,
  .header__link:focus-visible {
    color: var(--clr-basic-white);
  }
  .header__hero {
    position: relative;
    display: grid;
    place-content: center;
    height: 32rem;
    width: 70%;
    text-align: start;
  }
  .header__hero-img {
    right: -80%;
    position: absolute;
  }
  .header__title {
    /* preset 1 */
    margin-block-start: 0;

    font-size: var(--fs-preset-1);
    line-height: var(--lh-115);
    letter-spacing: var(--ls-tightest);
  }
  .header__description {
    width: 70%;
    /* preset 4 medium */
    font-size: var(--fs-preset-4);
    font-weight: var(--fw-medium);
    line-height: var(--lh-165);
    letter-spacing: var(--ls-none);
  }
  .header__cta {
    width: max-content;
  }
}

/* ========== END HEADER SECTION ========== */

/* ========== START SHORTENER SECTION ========== */
.shortener {
  position: relative;
  margin-block-start: 10rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.shortener__form {
  position: absolute;
  bottom: 0;
  transform: translateY(50%);
  width: 87.5%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: var(--spacing-200);
  padding: var(--spacing-300);
  border-radius: 12px;
  background-color: var(--clr-primary-purple-950);
  overflow: hidden;
  max-width: 69.5rem;
}

@media (min-width: 48rem) {
  .shortener__form {
    flex-direction: row;
    gap: var(--spacing-300);
    padding: var(--spacing-650) var(--spacing-800);
  }
}

.shortener__picture {
  position: absolute;
  top: 0;
  right: 0;
  z-index: -1;
}

@media (min-width: 48rem) {
  .shortener__picture {
    height: 100%;
    width: 100%;
  }

  .shortener__background {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
}

.shortener__form-input {
  width: 100%;
  border-radius: 8px;
  border: none;
  padding: var(--spacing-150) var(--spacing-200);
  font-weight: var(--fw-medium);
}

@media (min-width: 48rem) {
  .shortener__form-input {
    font-size: var(--fs-preset-5);
    padding: var(--spacing-200) var(--spacing-400);
  }
}

.shortener__form-input::placeholder {
  font-weight: var(--fw-medium);
  color: var(--clr-neutral-grey-500);
}
/* ... */

